--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="The fierce carnivorous long canines"
+    />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="The fierce carnivorous long canines"
+      title="The King of the Jungle"
+    />
   </body>
 </html>
